先备份，只是加了点中文注释。一会要回退一下之前的LCD程序

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ test_multi_heap_host
 
 # VS Code Settings
 .vscode/
+my/blink/build/
+my/templete/build/blink.bin
+my/templete/build/app_trace/host_file_io.d
+my/templete/build/
+my/test/build/
+my/wifi/build/
